Add lp into motor_vel and arm_hybrid_controller a.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ add_library(${PROJECT_NAME}
         src/interface/can_interface/can_bus.cpp
         src/tools/can_motor.cpp
         src/tools/tf_rt_broadcaster.cpp
-        src/tools/old_lp_filter.cpp)
+        src/tools/lp_filter.cpp)
 
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
 
